--- a/src/styles/milligram.css
+++ b/src/styles/milligram.css
@@ -62,7 +62,7 @@ pre > code {
 
 hr {
   border: 0;
-  border-top: 0.1rem solid #f4f5f6;
+  border-top: 0.1rem solid #c6cedc;
   margin: 3.0rem 0;
 }
 
@@ -79,7 +79,7 @@ select {
      -moz-appearance: none;
           appearance: none;
   background-color: transparent;
-  border: 0.1rem solid #d1d1d1;
+  border: 0.1rem solid #c6cedc;
   border-radius: .4rem;
   box-shadow: none;
   box-sizing: inherit;
