--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,17 +41,14 @@ body {
   padding: 1rem;
   color: #fff;
 }
-.nav a {
-  color: #fff;
-}
 .nav__logo {
   margin: 0;
+  color: #fff;
   padding: 0.5rem 8rem 0.5rem 16rem;
   font-weight: 700;
   position: relative;
   width: 100%;
   font-size: 3rem;
-  transition: color 0.3s;
 }
 .nav__logo::before {
   content: '';
@@ -74,6 +71,7 @@ body {
   padding: 1rem;
   transition: color 0.3s;
   position: relative;
+  color: #fff;
 }
 .nav__list-item:hover,
 .nav__list-item:focus {
@@ -115,22 +113,72 @@ body {
   margin-right: 8rem;
   display: flex;
   align-items: center;
+  position: relative;
 }
-.nav__user-link {
+.user-menu__button {
   display: block;
   border-radius: 50%;
   width: 50px;
   height: 50px;
   border: 2px solid #fff;
   background-color: #fff;
-  background-image: url('public/avatar.jpg');
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
   transition: border-color 0.3s;
 }
-.nav__user-link:hover,
-.nav__user-link:focus {
+.user-menu__button:hover,
+.user-menu__button:focus {
   border-color: #aabde0;
+}
+.user-menu {
+  display: block;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background: #fff;
+  right: 0;
+  top: 60px;
+  z-index: 1;
+  visibility: hidden;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  border-radius: 2px;
+  transform-origin: 100% 0;
+  transform: scale(0);
+  transition: transform .3s cubic-bezier(.4,0,.2,1), opacity .3s cubic-bezier(.4,0,.2,1);
+}
+.user-menu--visible {
+  visibility: visible;
+  opacity: 1;
+  z-index: 999;
+  transform: scale(1);
+}
+.user-menu__list {
+  list-style: none;
+  margin: 0;
+  padding: 1rem 0;
+  opacity: 0;
+  z-index: 1;
+}
+.user-menu__list--visible {
+  opacity: 1;
+  z-index: 999;
+}
+.user-menu__item {
+  margin: 0;
+  padding: 0 2rem;
+  height: 4rem;
+  line-height: 4rem;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity .2s cubic-bezier(.4,0,.2,1)
+}
+.user-menu__list--visible .user-menu__item {
+  opacity: 1;
+}
+.user-menu__item:hover {
+  background-color: #c6cedc;
 }
 .header {
   display: flex;
