--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -88,6 +88,7 @@ body {
   height: 10px;
   opacity: 0;
   border: 2px solid #aabde0;
+  will-change: transform, opacity;
   transition: transform 0.3s, opacity 0.3s;
   transition-timing-function: cubic-bezier(0.17, 0.67, 0.05, 1.29);
 }
@@ -142,8 +143,10 @@ body {
   top: 60px;
   z-index: 1;
   visibility: hidden;
+  user-select: none;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
   border-radius: 2px;
+  will-change: transform, opacity;
   transform-origin: 100% 0;
   transform: scale(0);
   transition: transform .3s cubic-bezier(.4,0,.2,1), opacity .3s cubic-bezier(.4,0,.2,1);
