--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -30,6 +30,7 @@ body {
 .nav {
   background-color: #107c91;
   display: flex;
+  justify-content: flex-end;
   height: 8rem;
   left: 0;
   max-width: 100%;
@@ -42,12 +43,12 @@ body {
   color: #fff;
 }
 .nav__logo {
-  margin: 0;
+  margin-right: auto;
+  margin-left: 8rem;
   color: #fff;
-  padding: 0.5rem 8rem 0.5rem 16rem;
+  padding: 0.5rem 0.5rem 0.5rem 8rem;
   font-weight: 700;
   position: relative;
-  width: 100%;
   font-size: 3rem;
 }
 .nav__logo::before {
@@ -58,7 +59,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  left: 90px;
+  left: 10px;
   width: 50px;
   height: 50px;
 }
