--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -193,15 +193,16 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-image: url("../public/header.jpg");
   margin-bottom: 4rem;
 }
-.landing-title {
+.content-title {
   text-align: center;
   font-style: italic;
   margin-bottom: 4rem;
   color: #107c91;
 }
-.main-search {
+.main-search, .main-add {
   padding: 2rem 5rem;
   width: 100%;
   position: relative;
@@ -266,6 +267,16 @@ input[type='text'].main-search-bar {
 .search-settings-fieldset input[type='checkbox'] {
   margin-right: 0.5rem;
 }
+.main-add {
+  color: #fff;
+}
+.add-main-title {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: -5rem;
+  width: 100%;
+}
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
   border: 1px solid rgba(0,0,0,0.2);
@@ -315,7 +326,7 @@ input[type='text'].main-search-bar {
 }
 
 @media (min-width: 40rem) {
-  .main-search {
+  .main-search, .main-add {
     width: 60%;
   }
   .card {
