--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -277,6 +277,13 @@ input[type='text'].main-search-bar {
   top: -5rem;
   width: 100%;
 }
+.add-form {
+  width: 100%;
+}
+.add-form-textfield {
+  font-size: 3rem;
+  height: 5rem;
+}
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
   border: 1px solid rgba(0,0,0,0.2);
@@ -326,8 +333,8 @@ input[type='text'].main-search-bar {
 }
 
 @media (min-width: 40rem) {
-  .main-search, .main-add {
-    width: 60%;
+  .main-search, .main-add, .add-form {
+    width: 780px;
   }
   .card {
     margin: 1.6rem;
