--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -91,7 +91,7 @@ body {
   border: 2px solid #aabde0;
   will-change: transform, opacity;
   transition: transform 0.3s, opacity 0.3s;
-  transition-timing-function: cubic-bezier(0.17, 0.67, 0.05, 1.29);
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
 }
 .nav__list-item::before {
   top: 0;
@@ -283,6 +283,12 @@ input[type='text'].main-search-bar {
 .add-form-textfield {
   font-size: 3rem;
   height: 5rem;
+}
+.ingredient-field {
+  display: flex;
+}
+.ingredient-field__label, .ingredient-field__remove {
+  flex: 0 0 auto;
 }
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
