--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -280,6 +280,9 @@ input[type='text'].main-search-bar {
 .add-form {
   width: 100%;
 }
+.add-form-block {
+  margin: 2rem 0;
+}
 .add-form-textfield {
   font-size: 3rem;
   height: 5rem;
@@ -289,6 +292,11 @@ input[type='text'].main-search-bar {
 }
 .ingredient-field__label, .ingredient-field__remove {
   flex: 0 0 auto;
+  font-size: 3rem;
+}
+.add-ingredient-button {
+  display: block;
+  margin: 0 auto;
 }
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
