--- a/src/styles/milligram.css
+++ b/src/styles/milligram.css
@@ -120,7 +120,10 @@ input[type='submit'] {
   text-decoration: none;
   text-transform: uppercase;
   white-space: nowrap;
-  transition: background-color .1s cubic-bezier(.4,0,.2,1);
+  transition:
+    background-color .1s cubic-bezier(.4,0,.2,1),
+    color .1s cubic-bezier(.4,0,.2,1),
+    border-color .1s cubic-bezier(.4,0,.2,1);
 }
 
 .button:focus, .button:hover,
