--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,6 +31,9 @@ body {
   display: flex;
   justify-content: center;
 }
+.text-centered {
+  text-align: center;
+}
 .button-large {
   font-size: 1.8rem;
   height: 5rem;
@@ -43,6 +46,48 @@ body {
 }
 button:disabled {
   cursor: not-allowed;
+}
+.icon-vcheap::before {
+  content: "\f153";
+}
+.icon-cheap::before {
+  content: "\f153\f153";
+}
+.icon-exp::before {
+  content: "\f153\f153\f153";
+}
+.icon-vexp::before {
+  content: "\f153\f153\f153\f153";
+}
+.icon-background::before {
+  content: '';
+  display: block;
+  width: 8rem;
+  height: 8rem;
+  background-repeat: no-repeat;
+  background-size: contain;
+  font-size: 8rem;
+}
+.icon-starter::before {
+  background-image: url('public/starter-icon.png');
+}
+.icon-main-course::before {
+  background-image: url('public/main-course-icon.png');
+}
+.icon-dessert::before {
+  background-image: url('public/dessert-icon.png');
+}
+.icon-spring::before {
+  background-image: url('public/spring-icon.png');
+}
+.icon-summer::before {
+  background-image: url('public/summer-icon.png');
+}
+.icon-autumn::before {
+  background-image: url('public/autumn-icon.png');
+}
+.icon-winter::before {
+  background-image: url('public/winter-icon.png');
 }
 .nav {
   background-color: #107c91;
@@ -370,9 +415,9 @@ input[type='number'].add-form-numberfield {
   margin: 1rem 2rem 0;
   cursor: pointer;
   opacity: 0.5;
-  transition: opacity 0.2s, color 0.2s;
-  transition-timing-function: cubic-bezier(.4,0,.2,1);
   width: 14rem;
+  transition: opacity .2s, color .2s;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
 }
 .add-form__radio-group:hover {
   opacity: 1;
@@ -386,7 +431,10 @@ input[type='number'].add-form-numberfield {
   margin: 0 auto 1rem;
   border-radius: 50%;
   border: 2px solid #107c91;
-  transition: background-color 0.2s cubic-bezier(.4,0,.2,1);
+  transition: background-color .2s cubic-bezier(.4,0,.2,1);
+}
+.add-form__radio-group .icon-background-container {
+  border: none;
 }
 .add-form__radio-group i {
   font-size: 3.5rem;
@@ -394,7 +442,7 @@ input[type='number'].add-form-numberfield {
   text-align: center;
   vertical-align: middle;
   color: #107c91;
-  transition: color 0.2s cubic-bezier(.4,0,.2,1);
+  transition: color .2s cubic-bezier(.4,0,.2,1);
 }
 input[type="radio"]:checked + .add-form__radio-group {
   opacity: 1;
@@ -403,20 +451,14 @@ input[type="radio"]:checked + .add-form__radio-group {
 input[type="radio"]:checked + .add-form__radio-group span {
   background-color: #107c91;
 }
+input[type="radio"]:checked + .add-form__radio-group .icon-background-container {
+  background-color: transparent;
+}
 input[type="radio"]:checked + .add-form__radio-group i {
   color: #fff;
 }
-.icon-vcheap::before {
-  content: "\f153";
-}
-.icon-cheap::before {
-  content: "\f153\f153";
-}
-.icon-exp::before {
-  content: "\f153\f153\f153";
-}
-.icon-vexp::before {
-  content: "\f153\f153\f153\f153";
+input[type="radio"]:checked + .add-form__radio-group .icon-background-container i {
+  color: #107c91;
 }
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
@@ -457,9 +499,6 @@ input[type="radio"]:checked + .add-form__radio-group i {
 }
 .footer {
   margin-top: 6rem;
-}
-.footer__text {
-  text-align: center;
 }
 .footer__text span {
   font-size: 1rem;
