--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -102,6 +102,14 @@ button:disabled {
 .icon-winter::before {
   background-image: url('public/winter-icon.png');
 }
+.transition-screen {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  color: #fff;
+  z-index: 99;
+}
 .nav {
   background-color: #107c91;
   display: flex;
