--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,6 +37,14 @@ body {
   25% { transform: scale(0.9); }
   100% { transform: scale(1); }
 }
+@keyframes basic-shit-show {
+  0% { opacity: 0 }
+  25% { opacity: 0.5 }
+  100% { opacity: 1 }
+}
+.basic-shit-show {
+  animation: 0.3s basic-shit-show;
+}
 .flex-container {
   display: flex;
   justify-content: center;
