WIP : Add error tooltips on the Add page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,13 +37,13 @@ body {
   25% { transform: scale(0.9); }
   100% { transform: scale(1); }
 }
-@keyframes basic-shit-show {
+@keyframes show-anim {
   0% { opacity: 0 }
   25% { opacity: 0.5 }
   100% { opacity: 1 }
 }
-.basic-shit-show {
-  animation: 0.3s basic-shit-show;
+.show-anim {
+  animation: 0.3s show-anim;
 }
 .flex-container {
   display: flex;
@@ -128,6 +128,7 @@ button:disabled {
   font-size: 4rem;
 }
 .transition-image {
+  display: block;
   background-image: url('public/meny.png');
   background-repeat: no-repeat;
   background-position: center;
@@ -146,7 +147,7 @@ button:disabled {
   width: 16%;
   margin: 0 10rem;
   font-size: 2rem;
-  transition: color 0.3s cubic-bezier(.4,0,.2,1);
+  transition: color 0.2s cubic-bezier(.4,0,.2,1);
 }
 .transition-link:hover {
   color: #aabde0;
