--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -84,6 +84,47 @@ button:disabled {
   border-width: 1rem;
   margin-left: -1rem;
 }
+.arrow-right::before, .arrow-right::after {
+  left: 86%;
+}
+.tooltip-container {
+  text-align: center;
+  position: absolute;
+}
+.tooltip {
+  display: inline-block;
+  text-align: center;
+  padding: 1rem 2rem;
+  border-radius: .4rem;
+  position: relative;
+}
+.tooltip i {
+  padding-right: 1rem;
+  position: relative;
+  top: 0.1rem;
+}
+.error-msg {
+  background: #f2dede;
+  color: #a94442;
+  border: 1px solid #a94442;
+}
+.error-msg::before {
+  border-bottom-color: #a94442;
+}
+.error-msg::after {
+  border-bottom-color: #f2dede;
+}
+.info-msg {
+  background: #f1f6ff;
+  color: #aabde0;
+  border: 1px solid;
+}
+.info-msg::before {
+  border-bottom-color: #aabde0;
+}
+.info-msg::after {
+  border-bottom-color: #f1f6ff;
+}
 .icon-vcheap::before {
   content: "\f153";
 }
@@ -429,42 +470,28 @@ input[type='radio'].hidden-input {
   top: -5rem;
   width: 100%;
 }
-.add-main__error {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  top: 9.5rem;
-  width: 100%;
-}
-.add-main__error-msg {
-  display: inline-block;
-  text-align: center;
-  padding: 1rem 2rem;
-  background: #f2dede;
-  color: #a94442;
-  border: 1px solid #a94442;
-  border-radius: .4rem;
-  position: relative;
-}
-.add-main__error-msg::before {
-  border-bottom-color: #a94442;
-}
-.add-main__error-msg::after {
-  border-bottom-color: #f2dede;
-}
-.add-main__error-msg i {
-  padding-right: 1rem;
-  position: relative;
-  top: 0.1rem;
-}
 .add-form {
   width: 100%;
 }
 .add-form__block {
   margin: 2rem 0;
+  position: relative;
 }
 .add-form__title {
   margin-bottom: 1.5rem;
+}
+.add-form__user-error {
+  top: 9.5rem;
+  right: 4.8rem;
+}
+.add-form__name-error {
+  top: 9.5rem;
+  left: 0;
+  width: 100%;
+}
+.add-form__ingredients-error, .add-form__steps-error {
+  right: 1rem;
+  top: -1.9rem;
 }
 .add-form-image {
   flex: 0 1 15%;
@@ -528,7 +555,7 @@ input[type='number'].add-form-numberfield {
   flex: 0 1 auto;
   margin: 1rem 2rem 0;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.3;
   width: 14rem;
   position: relative;
   transition: opacity .2s, color .2s;
