--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -716,40 +716,63 @@ input[type="radio"]:checked + .add-form__radio-group .icon-background-container 
 }
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  border: 1px solid rgba(0,0,0,0.2);
   max-width: 100%;
   background: #fff;
   border-radius: 2px;
   position: relative;
   display: flex;
+  margin: 1rem 0;
+}
+.wide-card {
+  border: 1px solid rgba(0,0,0,0.2);
   flex-direction: column;
   flex: 1 1 100%;
-  margin: 1rem 0;
 }
 .small-card {
   flex: 1 1 50%;
 }
-.card__title {
-  display: flex;
-  height: 160px;
-  padding: 1.6rem;
-  background-image: url('public/woof.jpg');
+.card__image {
+  flex: 1 0 auto;
+  height: 200px;
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
 }
-.card__title-text {
+.wide-card .card__image {
+  height: 160px;
+  display: flex;
+  padding: 1.6rem;
+}
+.card__image-text {
   align-self: flex-end;
   color: #fff;
   font-style: italic;
   margin: 0;
 }
+.card__content {
+  width: 60%;
+  padding: 1.6rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+.card__title, .card__text, .card__infos {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.card__title {
+  width: 90%;
+}
 .card__text {
+  border-top: 1px solid rgba(0,0,0,0.2);
+  width: 100%;
+  padding-top: 1rem;
+}
+.wide-card .card__text {
   padding: 1.6rem;
 }
-.card__actions {
-  border-top: 1px solid rgba(0,0,0,0.2);
-  padding: 1.6rem;
+.card__infos {
+  width: 10%;
 }
 .footer {
   margin-top: 6rem;
@@ -766,7 +789,7 @@ input[type="radio"]:checked + .add-form__radio-group .icon-background-container 
   .card {
     margin: 1.6rem;
   }
-  .wide {
+  .wide-card {
     margin: 3.2rem 1.6rem;
   }
 }
